@@ -1,5 +1,12 @@
 2008-06-19  Emilio Meschi  <emilio.meschi@cern.ch>
 
+	* tag V01-03-03
+	* added counter for recovery attempts
+	* fixed bug in defaultWebPage causing crash when page is loaded while
+	in recovery
+
+2008-06-19  Emilio Meschi  <emilio.meschi@cern.ch>
+
 	* tag V01-03-02
 	* removed printout ( or replaced with log where necessary)
 	* block watchdog when starting edm::eventProcessor to avoid races
